Don't expect a palm based on pressure (#22806)

If the first touch on the touchpad is above palm_min_z, the palm detection
unsets the finger status ("probably palm"). Don't do that, for low values of
palm_min_z this disables the finger during normal use of the touchpad.

X.Org Bug 22806 <http://bugs.freedesktop.org/show_bug.cgi?id=22806>

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>